# quori_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/astra_ros/share/astra_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/astra_ros/share/astra_ros/cmake/: astra_rosConfig-version.cmake  astra_rosConfig.cmake
install/astra_ros/share/astra_ros/environment/: ament_prefix_path.dsv  path.dsv
install/quori_controller/share/quori_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/quori_description/share/quori_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/quori_description/share/quori_description/cmake/: quori_descriptionConfig-version.cmake  quori_descriptionConfig.cmake
install/quori_gazebo/share/quori_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/quori_launch/share/quori_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/quori_msgs/share/quori_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/quori_teleop/share/quori_teleop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/quori_work/share/quori_work/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/respeaker_ros/share/respeaker_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: test.txt
src/astra_ros/: CMakeLists.txt
src/quori_controller/: CMakeLists.txt  README.md  readme.md
src/quori_controller/launch/: quori_control_holo.launch.py
src/quori_controller/src/: Joint.hpp  Quori.hpp  SerialDevice.hpp  calibrate_node.cpp  quori_controller_node.cpp
src/quori_description/: CMakeLists.txt  README.md
src/quori_description/meshes/install/: setup.bash  setup.sh  setup.zsh
src/quori_description/meshes/log/: latest_build
src/quori_description/models/quori/: model.config  model.sdf
src/quori_description/urdf/: quori.gv  quori.urdf  quori.xacro  quori_kinematics.xacro
src/quori_description/urdf_og/: quori.urdf  quori.xacro  quori_kinematics.xacro  quori_standalone.xacro  ramsis_standalone.xacro
src/quori_gazebo/: CMakeLists.txt  README  README.md
src/quori_gazebo/launch/: empty_world.launch.py  robot_state_publisher.launch copy.py  robot_state_publisher.launch.py  spawn_quori.launch.py  spawn_quori.launch_old.py
src/quori_gazebo/rviz/: quori_world .rviz  quori_world_.rviz
src/quori_launch/: CMakeLists.txt
src/quori_launch/launch/: osu_robot.launch.py
src/quori_msgs/: CMakeLists.txt
src/quori_teleop/: CMakeLists.txt  package.xml
src/quori_work/: CMakeLists.txt
src/quori_work/src/: human_detector.py
src/respeaker_ros/: CMakeLists.txt  package.xml
(+76 files in other folders)
